<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/message"
        android:layout_weight="1"
        android:gravity="top"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/last_name"
            />
        <EditText
            android:id="@+id/last_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_alignParentRight="true"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_below="@+id/last_name"
            />
    </RelativeLayout>
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="right"/>

</LinearLayout>
